# django-release-manager

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  python-publish.yml  python-test.yml
develop/: db.sqlite3.bak
develop/core/: admin.py  models.py  urls.py  views.py
develop/core/fixtures/: release_data.json  sample_user.json
develop/core/migrations/: 0001_initial.py
develop/core/templates/core/: index.html
develop/develop/: settings.py  urls.py
develop/templates/: base.html  test_page.html
docs/: api.md  index.md
docs/modules/: about.md  installation.md  models.md  views.md
src/releasemanager/: admin.py  apps.py  models.py  settings.py  tests.py  urls.py  views.py
src/releasemanager/api/: serializers.py  urls.py  views.py
src/releasemanager/custom_tags/: release_template_tags.py
src/releasemanager/fixtures/: release_data.json  sample_user.json
src/releasemanager/management/commands/: rmaddfile.py  rmaddrelease.py  rmpackages.py
src/releasemanager/migrations/: 0001_initial.py  0002_defaults.py
src/releasemanager/templates/releasemanager/: index.html  list_releases.html  package_releases.html  release_template.html
src/releasemanager/templatetags/: release_template_tags.py
